namespace CrcChecker.Common
{
    public class NoTracingPerformanceTracer : IPerformanceTracer
    {
        public void Begin(PerformanceMarker performanceMarker, string param0 = null)
        {
        }

        public void End(PerformanceMarker performanceMarker, string param0 = null)
        {
        }
    }
}
